计算机网络总结

--- a/MOOC-Learning/计算机网络技术与应用-清华大学/计算机网络技术与应用4信号.md
+++ b/MOOC-Learning/计算机网络技术与应用-清华大学/计算机网络技术与应用4信号.md
@@ -14,9 +14,8 @@ categories:　MOOC学习总结
 <br/>　－收发器,实现数据与信号的转换过程(编／解码)
 <br/>　－信道：传播光信号或电信号的信道，分为有线信道/无线信道,单段物理链路信道/多段物理链路组合信道
 
-
-
 * 信道连接结点方式:根据同一信道连接设备的多少，可以把信道连接设备的方式分为点对点连接方式和多点连接方式(广播信道)
+
 * 数据通信方式:
 <br/>　－单工通信:又称单向通信,指数据只能沿一个固定方向传输,即传输是单向的,而且任何时候都不能改变数据传输方向
 <br/>　－半双工通信:又称双向交替通信,指数据允许沿两个方向传输,任一时刻只能沿一个方向传输数据
@@ -29,7 +28,7 @@ categories:　MOOC学习总结
 * 正弦信号：周期性的数字信号和模拟信号可以用一组不同频率的正弦波信号表示,从而产生正弦信号。包括幅度(A),频率(1/T),初始相位(简称相位φ)三个参数 
 ### 数字信号(离散)
 * 数字信号:幅度为有限离散值的信号数字信号改变幅度时,直接从一种幅度跳变到另一种幅度
-* 基带信号:幅度只有两种离散值(表示数字0和1)的数字信号基带信号为最常用的表示二进制位流的数字信号
+* 基带信号:幅度只有两种离散值(表示数字0和1)的数字信号，基带信号为最常用的表示二进制位流的数字信号
 * 谐波:用于合成周期性数字信号的不同频率的正弦波信号
 * 拟合周期性数字信号:由有限次谐波合成的接近原始周期性数字信号的信号
 * 带宽:用于形成拟合周期性数字信号的各次谐波的频率范围
