--- a/MOOC-Learning/计算机网络技术与应用-清华大学/计算机网络技术与应用5编码与调制.md
+++ b/MOOC-Learning/计算机网络技术与应用-清华大学/计算机网络技术与应用5编码与调制.md
@@ -10,7 +10,7 @@ categories:　MOOC学习总结
 
 ##编码(DS)
 * 二进制位流转换成数字信号的过程称为编码,解码是编码的逆过程，编码方式不同,对应解码方式不同。
-* 码元长度指数字信号中某个离散值维持不变的最小时间单位，将信号以码元长度为单位分隔,每一段码元长度内的信号称为码元，为信号的基本单位。
+* 码元长度：指数字信号中某个离散值维持不变的最小时间单位，将信号以码元长度为单位分隔,每一段码元长度内的信号称为码元，为信号的基本单位。
 * 单位时间内传输的码元数,为数字信号速率，也称为波特率；同时单位时间内传输的二进制位数，称为为传输速率；
 > 若数字信号的幅度有n个离散值,则每一个码元可以表示log(2)n位二进制数，当数字信号的波特率为B时,传输速率S=log(2)n×B
 * 编码需要考虑的因素包括：波特率越高,信道带宽要求越高；信号级数越大,还原难度越大，收发器的数字信号处理能力越强
@@ -22,8 +22,7 @@ categories:　MOOC学习总结
 * 移相键控调制技术(Phase Shift Keying,PSK):通过改变载波的相位来表示不同的二进制数值,分为:相对移相和绝对移相
 <br/>　－相对移相:二进制数0的信号和前面信号相同相位,二进制数1的信号和前面信号相反相位(相差180°)
 <br/>　－绝对移相:二进制数0和二进制数1分别用两种不同的相反相位(相差180°)的载波信号表示
-* 维持正弦波信号(或余弦波信号)幅度、频率和相位不变的最短时间长度称为码元长度，将信号以码元长度为单位分隔,每一段码元长度内的信号称为码元，是调制后用于表示二进制位流的模拟信号的基本信号单位
-，其中单位时间内传输的码元数量称为波特率
+* 维持正弦波信号(或余弦波信号)幅度、频率和相位不变的最短时间长度称为码元长度，将信号以码元长度为单位分隔,每一段码元长度内的信号称为码元，是调制后用于表示二进制位流的模拟信号的基本信号单位，其中单位时间内传输的码元数量称为波特率
 
 ## 奈奎斯特准则(理想信道):
 * 最大波特率RP=2×BW(BW为信道带宽) ;最大传输速率RS=2×BW×log(2)n(n为信号的状态数)
@@ -78,8 +77,6 @@ categories:　MOOC学习总结
 
 * 序号：若确认应答帧在传输过程中出错，经过规定时间,发送端再次发送数据帧,接收端将出现重复接收数据帧的情况，为避免这种情况往往在数据帧中增加序号，同时确认应答帧也需要携带确认序号n,说明小于n的数据都已经正确接收，从而可以连续发送，累积确认。
 > (序号位数有限,需要重复使用序号,但需要保证序号相同的没有被确认的数据帧只能有一帧,同时接收端能够区分序号相同的不同数据帧)
-
-
 
 # 传输媒体
 * 传输媒体也称为传输介质或传输媒介,用于构成数据传输系统中两个收发器之间的信道。分为导向传输媒体(如同轴电缆，双绞线，光纤)和非导向传输媒体（主要是自由空间）
