--- a/Others/互联网高可用架构(阿里云大学).md
+++ b/Others/互联网高可用架构(阿里云大学).md
@@ -44,5 +44,7 @@
         * 为保证数据的ACID,通常写操作会对数据库进行加锁，从而可能造成读操作的等待悬挂，降低响应速度，通过只读库提高查询速度；同时读写分离也可降低主库的压力；(同时只读库可进行一些复杂的业务查询，便于后台人员的业务分析)
         * 要求:及时复制(主要通过重做日志，只读库可能有多个)，适用于能接受数据同步有一定延迟的应用
 ## 如何设计高可用互联网应用架构
-    * 非可用结构:存在单点故障
+    * 非可用结构:存在单点故障；
+    * 高可用:多可用区
+##
 
