chapter 1 finshed: data partition and routing

--- a/Others/大数据日志录-架构与算法.md
+++ b/Others/大数据日志录-架构与算法.md
@@ -6,7 +6,7 @@ tags: [大数据, 概述, Big Data]
 
 # 大数据日知录-架构与算法
 
-## Chapter1 大数据概述
+## Chapter0 大数据概述
 * 背景:随着互联网技术的飞速发展，硬件存储成本的下降，使得大量数据的收集存储成为可能，因为数据呈现井喷式爆炸增长。
 * 大数据特点(4V)
     * Volume: 大容量
@@ -18,4 +18,34 @@ tags: [大数据, 概述, Big Data]
     * 数据存储管理: 分布式文件系统HDFS,NoSQl(图数据库，列式数据库HBase,)
     * 数据挖掘分析: 机器学习，时空序列分析，统计分析等
     * 数据可视化展示: 形象易懂
-* 
+
+## Chapter1 数据分片与路由
+* 概述：由于数据的爆炸式增长，传统的通过增加单机性能的纵向扩展，已不能满足大数据存储的需求，进而通过增加机器数据，进行分布式的横向扩展。因此往往需要对大数据进行数据分片，在数据查找时如何确定数据存储的位置便需要数据路由。
+* 数据复制：为提高系统的容错性和高可用性，往往需要对数据进行冗余存储，同时数据副本可以大大提高数据并发读取的效率。同时数据多副本也会带来并发更新时的一致性维护问题
+### 数据分片：
+* 抽象模型：通常分为两级映射:1,key-partition：数据key值到数据分片的映射；2.partition-machine:数据分片到机器的映射；
+* 哈希分片:主要通过哈希函数确定数据分片，仅支持点查询，不支持范围查询；如Dynamo,Cassandra,Riak,Voldmort,Membase等大多数KV存储系统
+    * Round Robin: 即对key进行取模，hash(key)mod K(K通常为物理机器数量)，由于哈希函数与物理机器数有关，所以系统通常难以扩展。
+    * 虚拟桶:所有数据记录通过哈希函数映射到对应的虚拟桶，然后通过查表将虚拟桶映射到物理机(通常为多对一关系)，相比之下更加灵活
+    * 一致性哈希:
+        * 分布式哈希表DHT是一种技术概念，是常用于P2P(Peer-to-Peer,对等联网)网络和分布式存储，一致性哈希为其一种实现
+        * 一致性性哈希算法(Chord,和弦系统中的一致性哈希算法):将哈希数值空间按照大小组成一个首尾相接的环状序列，不同的机器可根据其端口号或Ip等信息映射到环状序列中的不同节点，从而每台机器负责存储维护一段有序哈希空间内的数据，实现数据分片。
+            * 路由: 
+                * 每个机器配有路由表(通常包含m项，m为哈希空间二进制数值比特位长度，其中第i项路由信息代表距离当前节点为2^i的哈希空间数值所在的机器节点编号),
+                * 查找过程如下:
+                    * 节点i发起查找，后继为节点s,H(key)=j,若i\<j\<=s说明key对应的数据位于节点s,节点i向s发送消息请求查询key的对应数据值，并返回给节点i，
+                    * 否则节点i查询自身的路由表，找到小于j的最大编号n(若均大于j则选择第m-1项路由信息的编号作为n),节点i向节点n发送消息请求查询，此时节点n作为i进行以上步骤，以此循环；
+            * 增加新节点:
+                * 首先根据想要插入的位置，确定其后继节点，将new节点的后继指向s,前继节点置为空；
+                * 然后稳定性检测(所有节点均会周期性自动完成)，完成前驱和后继节点的更新以及数据前移；
+                * 此外整个过程的完成还需要等待其他节点的稳定性检测，同时每个节点需要周期性的检查其路由表，对路由表内每一项(k=2^i)加上本机节点编号执行路由算法，得到每个路由项经过查询获得的机器节点，与当前内容不同则更新。
+            * 删除已有节点:
+                * 正常删除:在离开前通知相应节点更新其前驱和后继节点，以及将本身持有的数据迁移到后继节点上，同时其他节点更新各自路由表
+                * 异常删除(往往由于机器故障)，为避免数据丢失可利用数据副本
+            * 稳定性检测步骤:
+                * 1.节点i向其后继节点s询问其前驱节点p，若后继s的前驱节点p为i本身,则调到步骤4，否则调到步骤2
+                * 2.如果节点p介于i和s之间，则i节点记录下p为其后继节点
+                * 3.选择i当前的后继节点作为x(可能为s也可能为p),如果x的前驱节点为空，或者i为x和他的前驱节点之间，则i给x发消息指示i就是x的前驱节点，此时x将其前驱节点设为i
+                * 4.x(p)节点将部分数据迁移到i节点(即哈希值小于等于i的数据)
+            * 虚拟节点:考虑到机器差异，负载均衡等问题，可将一个物理机器虚拟成多个虚拟节点
+* 范围分片：通常对key值进行排序，然后划分范围确定数据分片，通常通过映射表(可利用B+树)将数据分片映射到物理机器，对于数据分片在物理机上的管理可利用LSM树。如PNUTS,Azure,Bigtable
