开始数据复制与一致性

--- a/Others/大数据日志录-架构与算法.md
+++ b/Others/大数据日志录-架构与算法.md
@@ -49,3 +49,5 @@ tags: [大数据, 概述, Big Data]
                 * 4.x(p)节点将部分数据迁移到i节点(即哈希值小于等于i的数据)
             * 虚拟节点:考虑到机器差异，负载均衡等问题，可将一个物理机器虚拟成多个虚拟节点
 * 范围分片：通常对key值进行排序，然后划分范围确定数据分片，通常通过映射表(可利用B+树)将数据分片映射到物理机器，对于数据分片在物理机上的管理可利用LSM树。如PNUTS,Azure,Bigtable
+
+## 数据复制与一致性
