--- a/Others/大数据日志录-架构与算法.md
+++ b/Others/大数据日志录-架构与算法.md
@@ -104,7 +104,43 @@ tags: [大数据, 概述, Big Data]
     * 没有可以既可以直接转换到COMMIT又可以直接到ABORT状态的单独状态；
     * 不存在既不能做出决定，而且可从它直接转换到COMMIT状态的状态(PRECOMMIT已经做出决定)；
 #### 向量时钟(Vector Clock)：
+* 向量时钟通过将时间戳和事件绑定，在分布式环境在生成事件偏序关系(代表事件发生的先后顺序导致的事件间的因果依赖关系)的算法
+* 每个进程记录初始值为0整数向量时钟VCi(1....n),其中第j项代表该进程i看到的进程j的逻辑时钟，并以如下规则更新:
+    * 当进程i产生发送消息或接收消息或进程内部事件时，其将自己的向量时钟自己对应的位加一，即VCi[i]+=1;
+    * 当进程i发送消息m时，同时将自己的向量时钟(mVCi)和消息m一起发送出去
+    * 当进程j接收到进程i发送过来的消息时，更新自己的向量时钟的每一位数值:VCj[x]=max(VCj[x],mVCi[x]),其中x=1...n
+* 若事件1的时钟向量的每个维度的数值均小于等于事件2的对应位置的数值且至少有一位小于，那么称事件1是事件2的原因，事件2是事件1的结果(指两者逻辑上因果影响关系)；
+* 应用:Dynamo中使用向量时钟进行数据版本管理，配合RWN协议共同完成数据一致性维护，Risk类似
+#### RWN协议:
+* 通过对分布式环境下多备份数据读/写进行约束配置来达到数据一致性，其中:N为数据的备份数量;R为一次成功的读操作至少要有R个备份被成功读取;W为一次成功的更新操作至少要有W份备份被成功写入
+* R+W>N则保证读写副本一定存在交集，保证数据的强一致性(需要配置向量时钟判断数据的最新值)，R/W设置的越大，系统延迟越大，可根据实际的需求对R/W进行灵活配置
+#### Paxos协议:
+* 副本状态机模型(采用Log副本机制):每台机器各自保存一份Log副本和内部状态机，Log中顺序记载客户端发来的操作指令，并通过一致性模块保持各机器的Log副本内容一致，机器将依次执行Log中的指令更新自己的内部状态机，从而所有机器的内部状态得到一致，在实现时通常考虑:
+    * 安全性(非拜占庭模型下，状态机从不返回错误结果，多个提议中只会有一个被选中)
+    * 可用性保证，容忍少数机器发生故障
+    * 大多数状态机维护Log一致性即可快速通知客户端操作成功
+* 在Paxos中并行进程分为倡议者(提出提议)，接收者(投票表决选出唯一的提议),学习者(无投票权，可获知最终选举产生的唯一提议)
+* 异步通信环境下的非拜占庭模型:
+    * 并发进程的行为可以任意速度执行，允许运行失败，失败后可重试
+    * 并发进程之间通过异步方式相互通信，通信时间可任意长，传输过程信息可能丢失，允许消息重发，多重消息顺序可任意，但不允许消息被篡改(可通过内容完整性检测判断)，Paxos等很多一致性协议均基于非拜占庭模型(满足该条件可就多个并行进程的不同操作(提议)达成一致)
+* Paxos一致性协议过程(阶段一):
+    * 1.1倡议者选择倡议编号n，并向半数以上的接收者发送Prepare请求，并携带倡议编号n
+    * 1.2接受者接收到带有倡议编号n的Prepare请求：
+        * 若n均大于此接受者以前响应过的任何其他Prepare请求的倡议编号,则接受者响应该倡议者(并承诺不会响应之后接收到的倡议编号小于n的请求)，否则无回应
+        * 另外，若接受者曾经响应过2.2阶段的Accept请求，则将所有响应的Accept请求中倡议编号最大的倡议内容发送给倡议者(倡议内容包括Accept请求中的倡议编号以及其倡议值)
+* Paxos一致性协议过程(阶段二):
+    * 2.1若倡议者接收到大对数接受者关于倡议编号为n的Prepare请求的响应，则向这些接受者发送Accept请求(弱在接受者返回了之间曾经接收的倡议内容，则接受者回应的倡议内容中选择倡议编号最大的倡议内容对应的倡议值，否则倡议值可任意)
+    * 若接受者收到倡议编号为n的Accept请求，若此接受者在此期间没有响应过倡议编号大于n的Prepare请求，则接受此请求
+    * 最终将选出的唯一倡议者通知所有的学习者
+#### Raft协议
+* 
 
+
+
+
+
+
+* Paxos协议又可分为多Paxos协议(对应的Log内容中的多个位置的操作命令序列一致)和单Paxos协议(对应的Log内容中的某个位置的操作命令序列一致)
 
 
 
