--- a/Others/大数据日志录-架构与算法.md
+++ b/Others/大数据日志录-架构与算法.md
@@ -132,18 +132,27 @@ tags: [大数据, 概述, Big Data]
     * 2.1若倡议者接收到大对数接受者关于倡议编号为n的Prepare请求的响应，则向这些接受者发送Accept请求(弱在接受者返回了之间曾经接收的倡议内容，则接受者回应的倡议内容中选择倡议编号最大的倡议内容对应的倡议值，否则倡议值可任意)
     * 若接受者收到倡议编号为n的Accept请求，若此接受者在此期间没有响应过倡议编号大于n的Prepare请求，则接受此请求
     * 最终将选出的唯一倡议者通知所有的学习者
-#### Raft协议
-* 
-
-
-
-
-
-
 * Paxos协议又可分为多Paxos协议(对应的Log内容中的多个位置的操作命令序列一致)和单Paxos协议(对应的Log内容中的某个位置的操作命令序列一致)
 
-
-
+#### Raft协议
+* Raft协议将整个一致性协议划分为领导者选举，Log复制和安全性3个子问题，并将Paxos的P2P模式改为master-slave模式
+* 在Raft协议中，集群中的机器只能处于三种状态:
+    * Leader:正常情况只有一个，其负责响应所有的客户端请求
+    * Follower:只被动接受RPC消息
+    * Candidate：是Follower状态机器准备发起新的Leader选举需要转换到的中间状态
+* Raft协议将整个系统执行时间划分为若干个不同时间间隔长度的时间片长度(Term,以递增数字标识)构成的序列，在Tearm开始时会选出一个该时间片内的Leader；
+* 领导者选举:
+    * 系统启动时，所有机器处于Follower状态，等待接收RPC消息，若Follower在选举超时时间后仍没有接收到Leader的心跳信息，则引发其启动新领导的选举过程，其中Leader通过向其他机器周期性的发送心跳信息保持其Leader地位
+    * 在开始选举前，Follower增加其Term编号并转入Candidate状态，然后向集群内的其他所有机器发出RequestVote RPC消息，之后一直处于Candidate状态，直到:
+        * 它赢得了本次选举(接收到大多数其他具有相同Term的投票)，然后通过向其他机器发送RPC心跳宣告其Leader地位
+        * 另外一个机器宣称并确认自己是新的Leader，若此Leader的Term编号大于等于自身Term编号，则承认此Leader有效，并转为Follower状态。否则拒绝承认
+        * 时间超时，仍没有Leader产生(可能同一时刻多个Follower转为Candidate状态，导致选票分流)，超时后增加自身Term编号进入下一轮选举(各机器超时时间随机)
+* Log复制:
+    * Leader接收到客户端的操作命令后，将其追加到Log尾部(附带Term编号)，然后向集群内的其他服务器发出AppendEntries RPC请求，引发其他服务器复制新的操作命令，安全复制完成后，Leader将这个操作命令应用到内部状态机，并将执行结果返回给客户端
+    * 此外有一个全局的索引指示操作在Log中的顺序编号，若两个操作记录具有相同的全局索引编号和相同的Term编号，则两个操作命令相同，且这个操作记录之前的所有前驱操作记录都完全相同
+* 安全性:
+    * 只有其Log包含了所有已经提交的操作命令的机器才可以被选为新的Leader
+    * 对于新Leader只有它自己已经提交过当前Term的操作命令才被认为是真正提交
 
 ## 大数据常用算法与数据结构
 ### 布隆过滤器BF(Bloom Filter):
