--- a/Others/大数据日志录-架构与算法.md
+++ b/Others/大数据日志录-架构与算法.md
@@ -164,7 +164,35 @@ tags: [大数据, 概述, Big Data]
  ### SkipList
  * 一种可代替平衡树的数据结构(大多数情况下可实现O(logn)的增删查改时间复杂度)，依靠随机生成数以一定概率保持数据的平衡分布，适用于有序存储，如LevelDB中的MemTable,Redis中的Sorted Set,Lucene中的倒排列表的查找都用到这种数据结构
  * 为链表中的部分节点增加更多的指针指向其后面的不同距离节点，并且在插入节点时随机决定该节点有多少指向后续节点的指针(称为该节点的Level,表头具有MaxLevel层级)
-  * 查找:从首节点的最高层级节点开始查找，若node-key小于search-key，指针后移，若等于则返回结果。若大于则指针移向下一层级，到达尾部还没找到则查找失败
-  * 插入:首先类似用类似查找的方法找到要插入的位置(第一个node-key>search-key的的节点前，若找到key相同节点则直接更新该节点值)；然后保存每一层的后继指针；然后生成插入新节点并调整指针；
-  * 删除：类似插入，查找要删除的节点，保存指针，删除节点后重新调整指针
+* 查找:从首节点的最高层级节点开始查找，若node-key小于search-key，指针后移，若等于则返回结果。若大于则指针移向下一层级，到达尾部还没找到则查找失败
+* 插入:首先类似用类似查找的方法找到要插入的位置(第一个node-key>search-key的的节点前，若找到key相同节点则直接更新该节点值)；然后保存每一层的后继指针；然后生成插入新节点并调整指针；
+* 删除：类似插入，查找要删除的节点，保存指针，删除节点后重新调整指针
 ### LSM树
+* 本质是将大量的随机读写转换为批量的序列写，使用于对写操作效率有高要求的场景(但读效率有所降低，利用Bloom Filter优化)
+* 一般实现原理(以LevelDB为例):
+* 构成LevalDB的静态结构包含6个主要部分:
+    * 内存中:MemTable(采用SkipList结构); Immutable Memtable(不可更改，可读取)
+    * 磁盘上:Current文件;manifest文件;log文件(用于系统崩溃后恢复);SSTable文件(多个，以不同Leval分层)
+* 当用户写入一条KV记录时，LevalDB先将操作写入log文件(磁盘顺序写)，成功后将该记录插入Memtable中，从而完成写入操作；
+* 当Memtable中插入的数据占用内存到一个界限后,LevelDB会生成新的Log文件和Memtable,原来的Memtable成为Immutable Memtable，此后的写操作存入新的long文件和Memtable。LevelDB后台调度系统会将Immutable Memtable的数据导入到磁盘，(经过Compaction)形成一个新的SStable文件
+* SSTable中主键有序，除Level0外两个SSTable(.sst)文件主键范围不存在重叠。
+* manifest记载SSTable各个文件的管理信息(如属于哪个Level,文件名，最小key/最大key)
+* Current用来当前的manifest文件名(在SSTable的Compaction的过程中会生成新的manifest)
+* Compaction机制(与Bigtable基本一致)，分为三种:
+    * minor Compaction:将Memtable中的数据导出到SSTable文件中，根据key值从小到大依次写入Level0,写完后建立文件的index数据(不涉及删除)
+    * major Compaction:合并不同层级的SSTable文件，当Level下的SSTable文件数目达到一定设置值时，LevelDB会从这个Level(>0)的SSTable中选择一个文件，和高一层级(Level+1)的(与此文件存在key重叠)SSTable文件合并;对于Level0，当选择一个文件后，会找到Level0中所有与此文件的key范围存在重叠的文件，然后与上层文件合并，关于合并过程采用多路归并排序，写入一个新文件(并删除不必要的记录)，此后删除原来参与合并的旧文件
+    * full Compaction:将所有SSTable进行合并(LevelDB不包含)
+* 应用:如Bigtable的单机数据引擎，基于Flash的海量存储系统SILT，内存数据库RAMCloud，此外Cassandra,LevelDB也采用了LSM树
+
+### Merkle哈希树：
+* 起初用户高效Lamport签名验证，在分布式中用来在海量数据下快速定位少量变化的数据内容
+* 其叶子节点为每个数据或数据块对应的哈希值，其中间节点为对其所有子节点再次进行哈希运算后的值，依次向上直至根节点，当某个数据发生变化时，其对应的叶子节点的哈希值发生变化，该叶子节点的父节点对应的哈希值也随之发生变化，向上传递直至根节点随之发生变化，通过哈希值比较，从而可以在O(logn)的时间复杂度内快速定位发生变化的数据。
+* 应用:
+* Dynamo结合Merkle树(用来快速定位多副本中不一致内容)和Gossip协议来对副本数据进行同步；
+* 比特币中使用Merkle树来对交易进行验证(根据交易信息的哈希中定位在最长链表中的位置依次向上对比哈希值，能够到达根节点说明合法)
+
+#### Snappy与LZSS算法
+* Snappy是一种基于LZ77(更准确的是LZSS)高效的数据压缩和解压缩算法库，在合理的压缩率的基础上追求尽可能快的压缩速度，在Bigtable,Mapreduce,PRC中都能使用，其中Hadoop,HBase,Cassandra,Avro都用到此算法库；
+> 数据压缩算法本质上是通过增加CPU计算时间成本来换取较小的存储成本，以及网路和I/O传输成本。
+* LZ77算法:LZ77是一种动态词典编码(从文本中自动导出词典，后续文本中的词用它在词典中表示位置的号码代替，此外还有静态词典)
+* 采用
