完成lZSS压缩算法

--- a/Others/大数据日志录-架构与算法.md
+++ b/Others/大数据日志录-架构与算法.md
@@ -194,5 +194,13 @@ tags: [大数据, 概述, Big Data]
 #### Snappy与LZSS算法
 * Snappy是一种基于LZ77(更准确的是LZSS)高效的数据压缩和解压缩算法库，在合理的压缩率的基础上追求尽可能快的压缩速度，在Bigtable,Mapreduce,PRC中都能使用，其中Hadoop,HBase,Cassandra,Avro都用到此算法库；
 > 数据压缩算法本质上是通过增加CPU计算时间成本来换取较小的存储成本，以及网路和I/O传输成本。
-* LZ77算法:LZ77是一种动态词典编码(从文本中自动导出词典，后续文本中的词用它在词典中表示位置的号码代替，此外还有静态词典)
-* 采用
+* LZSS算法:LZSS是一种动态词典编码(与静态词典不同,从文本中自动导出词典，后续文本中的词用它在词典中表示位置的号码代替)
+    * 采用基于滑动窗口缓存技术和前向缓冲区,由滑动窗口(包含若干已经处理过的字符)内的文本构造词典，前向缓冲区包含若干待处理的字符，将前向缓冲区中的第一个字符与滑动窗口中的字符进行匹配，若匹配长度超过最小匹配长度限制，则将匹配字符串作为(指针(位置)，长度，后续字符)输出,否则将该字符移入滑动窗口，并将窗口内最久的字符移除(LZ77最小匹配长度为1)
+    * 关于在滑动窗口中找出最长匹配字符串:将滑动窗口内各种长度的字符串片段存入哈希表，并记录其位置，在匹配时首先在哈希表中查找该字符串
+* Snappy算法遵循LZSS算法压缩编码与解码方案，最小匹配长度限制为4，其滑动窗口每次后移的长度也为4.其哈希表内存储的字符串长度也为4，此外其将文件分为32KB的数据片分别压缩
+#### Cuckoo哈希
+* 有效解决哈希冲突问题，可在O(1)的时间复杂度内查找删除数据，在常数时间内插入数据，大约50%的哈希空间利用率。
+* 基本原理:Cuckoo哈希使用两个不同的哈希函数，对于一个数据x，分析利用两个哈希函数计算其哈希值，若其中一个对应位置为空则将其放入，否则随机选择一个位置，将原来的数据y踢出,对于踢出的数据y,将其和原来的数据x一样处理，直至所有的数据都找到位置(通常会设置一个最大替换次数)，此外可以增加哈希函数的个数提高空间利用率，也可以增加每个桶可容纳的数据个数，减少替换次数。
+* 应用:SILT(small Index Large Table)存储系统利用Cuckoo哈希变体来作为外存索引，是一种基于FLash的高效利用内存的高性能KV存储系统，其将KV数据顺序追加到存储在Flash上的Log文件中，并在内存中利用部分主键Cuckoo哈希建立索引:
+    * 其哈希桶里存在主键Key的标签，节省空间
+    * 对于两个哈希函数对应的桶1和桶2，两个哈希函数互相将对方的哈西空降
