--- a/Others/大数据日志录-架构与算法.md
+++ b/Others/大数据日志录-架构与算法.md
@@ -203,4 +203,20 @@ tags: [大数据, 概述, Big Data]
 * 基本原理:Cuckoo哈希使用两个不同的哈希函数，对于一个数据x，分析利用两个哈希函数计算其哈希值，若其中一个对应位置为空则将其放入，否则随机选择一个位置，将原来的数据y踢出,对于踢出的数据y,将其和原来的数据x一样处理，直至所有的数据都找到位置(通常会设置一个最大替换次数)，此外可以增加哈希函数的个数提高空间利用率，也可以增加每个桶可容纳的数据个数，减少替换次数。
 * 应用:SILT(small Index Large Table)存储系统利用Cuckoo哈希变体来作为外存索引，是一种基于FLash的高效利用内存的高性能KV存储系统，其将KV数据顺序追加到存储在Flash上的Log文件中，并在内存中利用部分主键Cuckoo哈希建立索引:
     * 其哈希桶里存在主键Key的标签，节省空间
-    * 对于两个哈希函数对应的桶1和桶2，两个哈希函数互相将对方的哈西空降
+    * 对于两个哈希函数对应的桶1和桶2，两个哈希函数互相将对方的哈希空间位置作为自己的标签
+
+# 集群资源管理与调度
+* 背景:互联网公司为适应各种需求需要各种不同类型的计算系统(如实时计算的挖掘系统，适合交互查询场景的系统，批处理系统等)，面对各种类型的计算系统与框架，高效的资源管理与调度变得越来越重要，相比之下，传统的静态资源划分资源利用率较低，已经不能满足需求。因此设计出好的资源管理调度策略和方法。使得整个集群的大量资源在能够实现更高资源利用率的同时加快所有计算任务的整体完成速度成为集群资源管理与调度系统的核心目标
+* 趋势:在集群硬件层之上抽象出一个功能独立的集群资源管理系统，将所有可用资源当作一个整体来进行管理，并对其所有计算任务提供统一的资源管理与调度框架和接口，计算任务按需向其申请资源，使用完毕释放给资源管理系统,优点:
+    * 资源利用率高:根据不同计算任务即时动态分配资源
+    * 增加数据共享能力:所有资源对所有计算任务可用，避免了资源(数据)的冗余
+    * 支持多类型多版本计算框架:方便互联网的实际业务需求(快速的版本迭代更新)、
+## 资源管理抽象模型
+* 基于现有的资源管理与调度系统(YARN,Mesos,Corona,Quincy等)总结得出:资源管理的概念模型和统一架构;
+### 概念模型
+* 概念模型:将集群中的各种资源通过一定策略分配给用户提交到系统的各种任务。主要强调三要素:
+    * 资源组织模型(常见的资源包括内存,CPU,网络资源,磁盘I/O 4类)，常见的资源组织方式是将资源组织成多层级队列的方式(如Facebook的Corona将资源组织模型建为"all resource->group->pool"三级队列结构)，此外还有平级多队列以及单队列模型。
+    * 调度策略(包括FIFO,公平调度,能力调度，延迟调度等),以一定的方式将资源分配给待处理的任务
+    * 任务组织模型:将提交的任务组织起来，方便后续的资源分配。如Hadoop1.0将任务按照平级多队列组织，Hadoop2.0中的能力调度器增加了层级队列的树形队列结构.Quincy(微软Dryad系统的资源管理系统)采取全局队列，机架队列以及节点队列的树形队列结构作为任务组织模型
+### 通用架构
+* 
