--- a/Others/大数据日志录-架构与算法.md
+++ b/Others/大数据日志录-架构与算法.md
@@ -219,4 +219,30 @@ tags: [大数据, 概述, Big Data]
     * 调度策略(包括FIFO,公平调度,能力调度，延迟调度等),以一定的方式将资源分配给待处理的任务
     * 任务组织模型:将提交的任务组织起来，方便后续的资源分配。如Hadoop1.0将任务按照平级多队列组织，Hadoop2.0中的能力调度器增加了层级队列的树形队列结构.Quincy(微软Dryad系统的资源管理系统)采取全局队列，机架队列以及节点队列的树形队列结构作为任务组织模型
 ### 通用架构
-* 
+* 集群中每台机器上会配置节点管理器，其主要职责是不断地向资源收集器汇报目前本机资源使用情况，并负责容器的管理工作(当某个任务被分配到本节点时,节点管理器负责将其纳入某个容器执行并对该容器进行资源隔离，以避免不同容器内任务的相互干扰)。
+* 通用调度器由资源收集器和资源调度策略构成，同时管理资源池和工作队列数据数据结构。
+    * 资源收集器不断向集群内各个节点收集和更新资源状态信息，并将其最新状态反映到资源池中，资源池列出了目前可用的系统资源。
+    * 资源调度策略规定了如何将资源池中的可用资源分配给工作队列，常见的包括FIFO,公平调度，能力调度策略等。在实际中，资源调度策略往往是可插拔的
+
+## 调度系统设计的基本问题：
+* 资源异质性与工作负载异质性:如集群机器硬件配置差异；各种服务和功能差异，对资源需求的差异
+* 数据局部性:大数据场景基本原则为将计算任务推送到数据所在地(减少网络传输量)
+    * 在资源管理与调度语境下，有3种类型的数据局部性：节点局部性(无需网络传输)，机架局部性(同机架节点间网络传输速度较高)，全局局部性；
+* 抢占式调度与非抢占式调度:适用于多用户多任务场景下
+    * 抢占式调度:对于某个计算任务，如果资源不足或不同任务竞争同一资源，调度系统可以从比当前计算任务优先级更低的其他任务种获取已分配的资源，而被抢占的任务需要出让资源停止计算，可能后续继续重新申请资源来完成后续计算，有时甚至需要废弃已完成的计算任务。如Omega调度系统
+    * 非抢占式:只允许从空闲资源中进行分配，如果当前空闲资源不足，则必须等待其他任务释放资源。如Mesos中的资源调度
+* 资源分配粒度:
+    * 大数据场景下计算任务往往由两层结构构成:作业级和任务级，其中一个作业由多个并发任务构成，任务间的依赖关系有有向无环图(DAG，如典型的Mapreduce为特殊的DAG关系)
+    * 关于资源分配粒度问题：
+        * 一种极端情况是将作业的所有所需资源一次性分配完成(常被称为"群体分配"或"全分或不分")，如MPI任务；
+        * 另一种是采取增量满足式分配策略，即对于某个作业来说，只要分配部分资源就能启动一些任务，随着空闲资源不断出现，可以逐步增量式分配给作业其他任务以维持作业不断向后推进。如以MapReduce为代表的批处理任务等
+        * 有一种特殊的增量满足式分配策略被称为"资源储备"策略，指只有分配到一定量的资源后作业才启动，但在为获得足够资源之前，作业可以先持有目前已分配的资源，并等待其他作业释放资源，从而不断持有储备累积，直到达到最低标准后开始运行(在启动钱，已持有的资源处于闲置状态)
+* 饿死与死锁问题：常因为资源管理与调度策略设计不当，
+    * 某个任务持续长时间无法获得开始执行所需的资源，一直等待出现饿死(如优先级低的任务等)。
+    * 若系统的中的作业长时间无法继续推进，导致系统无法正常运行，从而导致调度系统进入死锁状态(如“资源储备”策略中，所有作业互相等待对方释放资源)
+    * 调度系统出现死锁必然表现为某些作业出现饿死，但计算任务处于饿死未必意味着调度系统处于死锁状态。合理的资源管理与调度策略应避免出现任务饿死和系统死锁的问题
+* 资源隔离方法:相比hadoop1.0的Map和Reduce槽的粗粒度资源分配方式，无论是YARN还是Mesos都采用了将各种资源(CPU,内存,网络带宽和I/O带宽)封装在容器中的细粒度资源分配
+    * 整个分布式资源管理系统封装了众多的资源容器，为了避免不同任务之间互相干扰，需提供容器间的资源隔离方法，目前常用的手段是Linux容器(LXC，如YARN,Mesos):
+        * LXC是一种轻量级内核虚拟化技术，可以用来进行资源和进程运行的隔离，可通过LXC在一台物理主机上隔离出多个相互隔离的容器(依赖于内核的cgroups子系统，一个内核提供的基于进程组的资源管理框架，可为特定进程组限定可以使用的资源)，如Google的大规模资源系统Borg和Omega采用了其开源的的Linux容器lmctfy系统，类似的还有Cloud Foundry的Warden
+
+## 资源管理与调度系统范型        
