--- a/Others/大数据日志录-架构与算法.md
+++ b/Others/大数据日志录-架构与算法.md
@@ -246,3 +246,23 @@ tags: [大数据, 概述, Big Data]
         * LXC是一种轻量级内核虚拟化技术，可以用来进行资源和进程运行的隔离，可通过LXC在一台物理主机上隔离出多个相互隔离的容器(依赖于内核的cgroups子系统，一个内核提供的基于进程组的资源管理框架，可为特定进程组限定可以使用的资源)，如Google的大规模资源系统Borg和Omega采用了其开源的的Linux容器lmctfy系统，类似的还有Cloud Foundry的Warden
 
 ## 资源管理与调度系统范型        
+###　集中式调度器
+* 所有资源请求和调度逻辑由一的全局中央调度器实例来完成(缺乏并发性，且可扩展性差系统存在单点瓶颈，适合小规模集群系统)，又分为单路径调度器和多路径调度器
+* 单路径调度器: 忽略计算任务的类型，所有计算任务都采用统一的调度策略进行资源的调度(无并发性)，常用在高性能计算系统(HPC),如Maui和Ｍoab等
+    * 基本调度策略通常采用融合多种考虑因素综合计算每个计算任务的优先级，然后按照任务优先级来进行后续的调度与资源分配
+* 多路径调度器: 针对多种计算任务的类型支持多种调度策略，由中央调度器针对任务类型进行不同分支的策略选择，此外可以利用多线程技术实现一定程度的并发性。如Brog调度系统
+###　两级调度器
+* 将整个系统的调度工作划分为两个级别(如Mesos,YARN,Hadoop On Demand):
+    * 中央调度器:可看到集群种所有机器的可用资源并可管理其状态，将所有资源按照一定的策略分配给各个计算框架，是一种粗粒度的调度方式
+    * 框架调度器:各个计算框架获得中央调度器分配的资源，可根据自身计算任务的特性，使用自身的调度侧库尔进一步细粒度的分配资源
+*　相比集中式调度，两级调度存在天然的并发性和可扩展优势，适合大规模集群下的多任务高负载计算情形。但中央调度器在做出将某些资源分配给哪个计算框架的过程中，必须依次顺序进行，并需要对目前待决策的资源加锁以避免不同框架资源申请时的冲突，因此这种并发是一种悲观的并发(存在锁等待阻塞)
+* 此外,Mesos在具体实现中央调度器的调度策略时，会更倾向于考虑在不同框架之间分配资源的公平性，而系统效率则由第二级的框架调度器来按需保证，比较适合各种计算框架具有类似的工作负载且以短作业为主的任务(否则容易出现长作业饿死的现象)
+###　状态共享调度器
+* 是google的Omega调度系统提出的一种资源管理与调度范型。每个计算框架可以看到集群的所有资源，并采用互相竞争的方式来获取自己所需的各种资源，然后根据自身特性采取不同的具体资源分配策略，同时系统采用了乐观的并发控制手段解决了不同计算框架在资源竞争中可能出现的冲突(竞争失败的任务可能会重新执行，造成资源浪费)。
+* 相比两级调度系统，Omega严重弱化了中央调度器的功能，只维护了一份用以恢复的集群状态信息的主副本(称为单元状态)，每个框架自身维护一份单元状态的私有副本，并不断更新副本信息，而框架对资源的请求直接在副本信息中进行:
+    * 资源竞争申请过程通过事物进行：只要计算框架具有特定的优先级就可以申请占有副本中的空闲资源，一旦框架做出资源决策，便将私有副本信息同步到中央调度器的主副本中去，从而完成资源申请并保证对其他框架可见(此外无法保证不同计算框架资源分配的公平性，低优先级框架可能出现饿死的情况)。
+* 三种调度范型不断弱化全局的中央调度器的功能，从而提高系统的灵活性，并发性，可扩展性。大规模数据处理系统的趋势是在硬件层之上的统一资源管理与调度系统，从而提高集群的整体资源利用率。
+
+## 资源调度策略
+* FIFO：按照作业提交的先后顺序或者作业的优先级将其放入一个线性队列，在资源调度时按照先进先出的规则进行资源分配(新加入的作业容易出现饿死)，是hadoop默认的调度策略；
+* 公平调度器:
