这就是搜索引擎－chapter3索引

--- a/Others/这就是搜索引擎(核心技术详解).md
+++ b/Others/这就是搜索引擎(核心技术详解).md
@@ -53,3 +53,61 @@ tags: [搜索引擎,信息检索,张俊林,读书笔记,算法]
     * 可分为不同层级:如分布式数据中心，分布式抓取服务器，分布式爬虫程序，整个爬虫系统由分布式在各地的数据中心组成，每个数据中心负责抓取本区域的网页，每个数据中心又包含多个抓取服务器，每个抓取服务器可部署多个爬虫程序。
     * 主从式分布爬虫:一台主服务器专门对其他从服务器提供URL分发服务(维护待抓取URL队列，并从网页中获取待抓取URL,则外还负责负载均衡等全局服务)，从服务器则负责实际网页抓取下载
     * 对等式分布爬虫:由服务器自己判断某个网页是否应该自己抓取(根据对URL哈希取模，一致性哈希等方法)    
+##　搜索引擎索引
+* 单词－文档矩阵:横行表示每个文档，纵列标示每个单词，对应的每个交叉的单元格表示每个文档是否哪些单词(或每个单词属于哪些文档)
+    * 常见实现方式:倒排索引，签名文件，后缀树等
+* 倒排索引:由单词词典和倒排文件组成:
+    * 单词词典：由所有的文档集合中出现的所有单词构成的字符串集合(通常用单词编号对单词进行标识)，每条索引项记载单词本身的一些信息和指向该单词对应倒排列表的指针；
+        * 数据结构:通常采用哈希加链表，或者B树(B+树)等查找树结构
+    * 倒排列表:记载出现过该单词的所有文档的集合(通常用文档编号标识每个文档，对于一个文档集合通常用差值的方式压缩存储)，以及单词出现的频率，单词出现的位置等信息；
+        * 对应文档集合内的每个文档称为一个倒排索引项； 所有单词的倒排列表组成一个倒排文件
+* 建立索引:
+    * 两遍文档遍历:
+        * 第一遍:扫描文档集合，收集文档总数N，不同单词的总数M，每个单词在多少文档中出现DF等全局信息，从而确定最终索引项所需要的存储空间；并分配一段连续的存储空间，根据每个单词对应的索引项集合大小需要的将其划分不同区段，每个单词拥有指向自身对应内存片段的起始终止指针；
+        * 第二遍:对于每个单词获得包含该单词的所有的文档ID,以及单词在文档中出现的次数TF等信息，填充第一遍遍历分配的该单词对应的内存区段。最终建立完整索引结构，将其保存到磁盘；
+
+    *　排序法:
+        * 依次读入文档，对文档进行唯一编号，并对于文档中出现的单词，首先在词典中进行查找获得单词ID(若该单词不存在则将其追加到词典中并分配新的编号)，然后根据文档内容建立，【单词ID，文档ID,单词频率】三元组将其保存到中间结果，依次处理理不同的文档；
+        * 当中间结果达到一定大小时，已单词ID为主键,文档ID为次键对所有的三元组进行排序，排序完成后将中间结果写入到磁盘中保存(此时词典一直保留在内存中，并不断增大)，然后释放内存空间后，继续处理后续文档
+        * 最后对于磁盘中所有的中间根据相同的单词ID进行合并,生成该单词最终的索引项.(由于单词ID有序，所以利用多个缓冲区高效合并即可)
+    * 归并法:
+        * 首先依次处理文档，在内存中建立单词词典对应倒排列表的完整倒排索引的数据结构。当占用内存空间达到一定大小后，将其完整的写入到磁盘中，并清空内存，依次处理所有文档；
+        * 最后对磁盘中单个不完整倒排索引进行合并。
+* 动态索引
+    * 在实际搜索引擎系统中，随着文档的更新，通常索引结构也在实时变化。对于动态索引结构通常由三部分构成倒排索引，临时索引，和已删除文档列表；
+    * 倒排索引是对初始文档建立的持久化索引结构，通常词典位于内存中，倒排文件放在磁盘中。
+    * 临时文件和已删除文件列表反应索引的实时变化，对新加入的文档，对其建立临时索引(完全位于内存中)，对于删除的文档将其加入已删除文档列表(对于更改的文档，视为先删除旧文档，然后加入新文档)
+    * 对于一个用户请求，同时在倒排索引和临时索引中进行查找，然后合并两个结果索引项，然后利用已删除文档列表对合并后的结果进行过滤，生成最终的返回结构；
+* 索引更新策略:
+    *　当临时索引占用的内存空间越来越大，需要将临时索引的内存更新到磁盘索引中已释放内存空间，从而涉及到索引的更新
+    * 完全重建策略:
+        * 对新加入的文档和原有文档进行合并，然后对所有的文档重新建立索引；
+    * 再合并策略:
+        * 首先在临时索引(增量索引)和磁盘中倒排索引的建立时，保证索引项按照相同的规则(如字典序)进行排序。
+        * 在合并时，同时遍历临时索引和原有的倒排索引进行合并成为一个新倒排索引(合并后追加/追加)；
+    * 原地更新策略:
+        * 在老的索引初始建立时会在每个索引项的后面，预留一定的空闲空间。对于临时索引中的索引项，在合并时将其追加到对应的预留空间中
+        * 若预留的空间不足以容纳临时合并后的索引项，则需要另外开辟一段足够大存储空间，并将合并后的索引项写入新开辟的空间中
+    * 混合策略: 
+        * 一般会将单词根据不同性质(如单词倒排列表的长度)进行分类，对其索引采取不同的策略
+* 查询处理:
+    *　一次一文档:首将查询涉及单词的倒排列表读入内存中，然后对其中涉及的文档，依次计算不同文档与查询信息的相似性得分，最后排序，将得分最高的前K个文档作为返回结果；
+    * 一次一单词:首先计算一个的单词的倒排列表中涉及的所有的文档的相似性得分(放在哈希表中)。然后处理下一个单词，并不断将同文档的得分累加。最终排序返回前K个作为结果。
+    * 跳跃指针:
+        * 背景:在计算文档与查询的相似性时，通常需要确定包含所有查询单词的文档，对倒排列表中直接保存文档ID的索引结构，只需要找到找到所用单词的倒排列表，然后计算其交集即可。但对于保存文档ID差值的索引结构，则需要先恢复文档ID
+        * 跳跃指针将一个单词的倒排列表，切分为若干个固定大小的数据块进行保存，并且对每个数据块增加元信息(描述此数据块,如开始的文档ID和指向下一个数据块的跳跃指针)
+        *　优点:对于压缩后的索引结构，在查询处理时无需全部解压缩，此外无需比较任意两个文档ID
+* 多字段索引:
+    * 实际中，对于互联网网页，可分为多个字段，如主题，摘要，正文等。不同字段在查询相关性评分中的作用不同
+    * 多索引方式:针对不同的字段建立多个索引结构，在处理查询时，合并多个字段的相关性得分。
+    * 倒排列表方式:在倒排列表中每个文档对应的索引项中添加一个该单词对应的字段信息
+    * 扩展列表方式:为每个字段建立一个列表，记载每个文档的该字段对应的位置信息。在查询时通过单词在文档中的位置信息即可确定其属于那个字段；
+* 短语查询:
+    * 位置信息索引: 根据单词在某几个单词在同一文档中的位置信息，判断是否构成一个短语；
+    * 双词索引:在内存中保存两个词典，首词(第一个)词典拥有指向下词词典(第二个)的指针，下词词典拥有指向倒排列表的指针，在查询处理时，首词下词组合即构成一个短语
+    * 短语索引:在词典中加入多词短语，并维护其倒排列表
+    * 混合方式:对于不同的短语(如热门高频短语，包含停用词的短语等)建立不同的索引，在查询时，依次在不同的索引结构在匹配
+* 分布式索引:
+    * 按文档划分:将整个文档切分为不同的子集，每台机器负责某些文档子集的索引建立与维护，在查询处理时，查询分发器将查询信息分发给所有索引服务器，各自负责查询的处理和响应；
+    * 按单词划分:将单词词典进行切分，每个服务其负责维护词典的部分子集，根据查询单词，依次交由不同的索引服务器进行处理，并累加相似性得分，最终排序返回前k个结果；
+## 索引压缩
