“完场chapter4索引压缩 ； ;

--- a/Others/这就是搜索引擎(核心技术详解).md
+++ b/Others/这就是搜索引擎(核心技术详解).md
@@ -111,3 +111,40 @@ tags: [搜索引擎,信息检索,张俊林,读书笔记,算法]
     * 按文档划分:将整个文档切分为不同的子集，每台机器负责某些文档子集的索引建立与维护，在查询处理时，查询分发器将查询信息分发给所有索引服务器，各自负责查询的处理和响应；
     * 按单词划分:将单词词典进行切分，每个服务其负责维护词典的部分子集，根据查询单词，依次交由不同的索引服务器进行处理，并累加相似性得分，最终排序返回前k个结果；
 ## 索引压缩
+* 通过数据压缩算法，对索引进行压缩可以减小索引占用的存储空间，同时在查询处理时减少磁盘的读写数据量，加快查询响应速度
+* 词典压缩:
+    * 对于采用B树结构的词典，通常存储单词信息，文档频率(DF)，倒排列表指针三项信息，其中后两项占用空间通常较小且固定(通常为各4字节)，通常针对第一项单词信息进行压缩优化
+    * 可以将所有的单词存储在一个单独的内存区域，倒排列表中保存指向该单词的指针，此外进一步还可以将词典进行分块，从而相邻多个词典项可以共享一个单词(数据块)指针
+* 倒排列表压缩算法:
+    * 在倒排列表中对于文档ID以及单词位置，通常采用差值存储，因此倒排列表中通常保存一系列的小的数值，且数字分布极不均衡；
+    * 评价索引压缩算法的指标:压缩率，压缩速度，解压速度(与响应速度有关)
+    * 基础理论:
+        * 一元编码:对于整数X，可利用X-1个二进制数字1和末尾一个数字0进行表示，适合小数值的表示；
+        * 二进制编码:即计算机采用的利用二进制数字1和0对数字进行编码
+    * Elias Gamma算法:
+        * 利用分解函数(X=2^e+d)将待压缩数字分解为两个因子,之后对e+1采用一元编码表示，对d采用比特宽度为e的二进制编码表示
+        * Elias Delta算法在Elias Gamma算法进一步改进，对于分解后的因子e+1再次分解（e+1=2^e2+d2）,然后对e2进行一元编码表示；
+    * Golomb算法:
+        * 与Elias Gamma算法方法类似，但分解函数不同:e1=（X-1）/b;e2=(X-1)mod b ,然后对于e1+1采用一元编码表示，对于e2采用比特宽度为log(b)的二进制编码表示；
+        * 假设一个待压缩数字序列的均值为avg,Goloma算法令b=0.69 x avg;
+        * RICE算法与Goloma算法仅仅在于b的取值不同，RICE算法要求b必须为尽可能大的2的整数幂，同时小于avg
+    * 变长字节压缩算法: 
+        * 已字节为单位进行存储，将每个字节分为两部分，其中最后一位用于标识存储元素的边界(为0代表末尾字节)，剩下的前7为用于存储要压缩的数字
+        * 以128为基数对待压缩的数字进行编码，一位(0-127)占用一字节的存储空间，利用连续的几个字节进行存储；
+    * Simple X算法
+        * 为一种字对齐压缩算法，通常以固定字节作为压缩单位；将固定的存储空间分为两个部分，其中前面一小段作为管理信息存储区，剩下的空间作为数据存储区；
+        * Simple 9算法，以4字节为一个压缩单位，其中前4个比特为管理信息区，指示后续的数据存储区的存储结构为那种类型(如后续每个数字占用的比特宽度B)，B的值可为1-9,从而将后续的数据存储区分为9中不同的类型；在压缩时对于后续的待压缩数字采用尝试的方法(B=1-9)确定B的数值。
+        * Simple 16算法可以将数据存储区划分为16中不同的类型(B=0-15),同时允许数据存储区的不等宽划分(从而解决了simple9的空间浪费)
+    * PForDelta算法:
+        * 对于待编码的连续K(一般K=128)个数，将其中10%的大数单独存储，同时根据剩下的90%的较小的数字确定存储采用的比特宽度
+        * 整个存储结构可划分为三个部分异常链表头+常规数据存储区+异常数据存储区(对于序列中的大数在常规数据存储区中用其在异常数据存储区的位置代替，同时异常链表头保存第一个大数在常规区的位置)
+        * 对于异常存储区的大数，对其不做压缩编码，利用4个字节直接存储。顺序与在原序列中的顺序相反；
+        * 在压缩时首先，确定异常的大数，和数据存储区采用的比特宽度；然后先处理异常大数，写入异常存续区，并构建异常链表；最后将剩下的数字压缩编码后写入数据存储区
+* 文档编号重排序:
+    * 倒排列表中文档ID的存储通常采用D-Gap(差值编号)，通过对文档ID重排序，使得倒排列表中相邻的文档ID尽可能的小，从而可以减少占用的空间大小；
+    * 可以对网页文档进行文本聚类，然后将内容主题相似的文档依次编号；
+* 静态索引裁剪:
+    * 在处理查询时，往往并不需要返回与某单词有关的所有的文档。所以可以将那些不那么重要的索引项从倒排列表中删除，从而减少索引项的大小，达到有损压缩的目的；
+    * 以单词为中心的索引裁剪:利用相似性函数，对一个单词对应的索引项文档进行相似性计算,并排序。然后根据一定的规则设定裁剪阈值(通常要求至少保留K个文档，且要保证文档有一定的富余)，然后将低于阈值的文档索引项裁剪掉；
+    * 以文档为中心的索引裁剪:在索引建立时，首先对文档中的单词进行处理，去除掉那些对于文档的主题不那么重要的单词；
+    
