finished:搜索引擎chapter5检索模型

--- a/Others/这就是搜索引擎(核心技术详解).md
+++ b/Others/这就是搜索引擎(核心技术详解).md
@@ -147,4 +147,49 @@ tags: [搜索引擎,信息检索,张俊林,读书笔记,算法]
     * 在处理查询时，往往并不需要返回与某单词有关的所有的文档。所以可以将那些不那么重要的索引项从倒排列表中删除，从而减少索引项的大小，达到有损压缩的目的；
     * 以单词为中心的索引裁剪:利用相似性函数，对一个单词对应的索引项文档进行相似性计算,并排序。然后根据一定的规则设定裁剪阈值(通常要求至少保留K个文档，且要保证文档有一定的富余)，然后将低于阈值的文档索引项裁剪掉；
     * 以文档为中心的索引裁剪:在索引建立时，首先对文档中的单词进行处理，去除掉那些对于文档的主题不那么重要的单词；
-    
+
+## 检索模型与搜索排序
+* 检索模型用来在用户需求已经由查询词明确表征的情况下，找出与之内容相关的文档。
+* 布尔模型:
+    * 将文档用一系列单词集合来表示，将查询表示一系列由逻辑允许符连接的单词序列。若文档中包含指定单词则为真，最后返回所有满足查询逻辑表达式的文档
+* 向量空间模型
+    * 将文档D和查询Q由一个t维特征向量进行表示(特征可以为单词，词组，N-gram片段等)，向量中元素可以为通过规则计算出的单词权重
+    * 相似性计算：cosine(Q,D)=（Q.D）/(|Q||D|)；(映射到t维空间中为两个向量的夹角)，然后根据相似性排序，返回前K个文档；
+    * 特征权重计算(Tf*IDF框架:
+        * 词频因子(Tf):即一个单词在文档中出现的次数（一种词频因子变体公式为Tf2=1+log(Tf),或 Tf2=a+(1-a)X（Tf/Max(Tf)）,第二种称为增强型规范化Tf，a为调节因子，通常为0.5,Max(Tf)为在该文档的所有单词的最大的Tf)
+        * 逆文档频率因子IDF:为一个文档集合的全局因子，对于给定的文档集合，每个单词的IDF确定，与具体文档无关，考虑特征单词之间相对重要性:IDFk=log(N/nk),其中N为文档集合中的文档总数，nk为单词k在多少个文档中出现
+        *Tf\*IDF框架:对于某个特征的对应权重wk=TfXIDFk
+* 概率检索模型:
+    * 基础原理:直接对用户需求相关性进行概率建模；
+        * 将文档集合分为相关文档和不相关文档两类;
+        * 给定一个文档D其对应的相关性概率为P(R|D)，不相关性概率为P(NR|D)，若P(R|D)>P(NR|D)则可以断定此文档与用户查询相关；
+        * 通过移项化简，可以将上面的相关性判断公式转化为一个二值分类问题:P(D|R)/P(D|NR) > P(NR)/p(R) 对于搜索系统只需关注第一项即可
+    * 二元独立模型BIM:
+        * 两个假设:
+            * 二元假设：对于一个单词只考虑其在文档出现与不出现两种情况；
+            * 词汇独立性假设:文档中出现的每个单词之间没有关联，各个单词在文档中出现的概率相互独立；
+            * 制定一个查询，对于每个文档可用0,1序列D表示，用Pi代表第i个单词在相关文档集合出现的概率,则P(D|R)=sum(Pi)+sum(1-Pj)，其中Di=1,Dj=0
+            * 通过以上模型可得到最终的相关性估算公式:P(D|R)/P(D|NR)=E([pi(1-si)]/[si(1-pi)]),其中Di=1,E表示连续乘积，si表示单词i在不相关文档中出现的概率
+    * BM25模型:
+        * 在BIM的基础上，考虑单词在查询和文档中的权值:sum{BIM*[[k1+1]fi/[K+fi]]\*[[(k2+1)qfi]/[k2+qfi]} 
+            * 公式第二部分代表查询词在文档D中的权值，fi代表单词在文档D中的频率，k1和K为经验参数；
+            * 公式第三部分代表查询词自身的权值，qfi代表查询词在用户查询中的频率，k2为经验参数
+    * BM25F模型:
+        * 将文档划分为不同的组成部分，如meta数据，标题等；不同部分权重不同，分别对待；
+        * 相关性判别公式:BIM*fi2/(k1+fi2),   fi2=sum(wkX(fui/Bu)),Bu=((1-bu)+buX(ulu/avulu)) ,其中文档包含u个不同的域，每个域的权重为wk,fui为单词i在第u个域中出现的频率，ulu代表域的实际长度，avulu是在整个文档其中中这个域的平均长度。bu为经验参数
+* 语言模型方法:
+    * 与由用户查询，确定相关文档的方法不同，语言模型首先对文档进行建模，然后根据模型判断该文档生成模型查询的概率，进行排序
+    * 可利用数据平滑的方式解决在建模中的数据稀疏问题（即查询中的单词并不是全都在文档中出现）:即将文档中出现的单词的分布概率向没出现过的单词转移一部分，使得每个单词都有非零的分布式值；
+    * 此外除了对每个文档进行建模外，可能还需要建一个北京模型:将将文档集合内的所有文档拼接为一个大的文档，对其建立模型。
+    * 加入数据平滑后的建模公式:P(Q|D)=E{(1-y)fqi,D/|D|+y*cqi/|D|}
+    * 此外还有其他模型，如HMM隐马尔科夫模型，相关模型，翻译模型等
+* 机器学习排序:
+    * 人工提供标注的训练数据，由机器通过学习算法(打分函数)自动计算出排序公式，适合多特征处理，通常分为人工标注训练数据，文档特征抽取，学习分类函数；
+    * 单文档方法:将单一文档转换为特征向量后，利用学习到的打分函数，进行打分，然后排序
+    * 文档对方法:对于两个文档，根据学习出的排序模型，直接对两者进行排序；
+    * 文档列表方法:依次选择K个文档，根据学习到的判断函数对其打分，然后系统自动排序
+* 检索质量评价标准:
+    * 精确率：一次搜索结果相关文档所占的比例
+    * 召回率:一次搜索结果中包含的相关文档占整个集合中相关文档的比例
+    * P@10指标：更关注排名最靠前的结果指标
+    * MAP指标：针对多次查询平均准确率进行评价
