finished:大数据日知录chapter4资源管理与调度

--- a/Others/大数据日志录-架构与算法.md
+++ b/Others/大数据日志录-架构与算法.md
@@ -266,3 +266,44 @@ tags: [大数据, 概述, Big Data]
 ## 资源调度策略
 * FIFO：按照作业提交的先后顺序或者作业的优先级将其放入一个线性队列，在资源调度时按照先进先出的规则进行资源分配(新加入的作业容易出现饿死)，是hadoop默认的调度策略；
 * 公平调度器:
+    * 首先将用户任务分配到多个资源池，每个资源池设定资源分配最低保障和最高上限(资源分配时先按照最低保障分配，然后将剩余资源按比例分配)。此外还可以指定资源池的优先级(高优先级的资源池将分配到更多资源)，另外运行中当一个资源池的资源由剩余时可将资源共享给其他资源池；
+    * 对于每个资源池，按照作业优先级或公平调度策略（通常为最大最小公平算法的实现）将资源分配给其中的作业，同时支持抢占式调度(当某个资源池长时间无法得到资源时，可以杀死过多分配资源的资源池中的任务，抢占释放的空闲资源)
+* 能力调度器:
+    * 适合多用户场景，强调用户间的公平性；
+    *将用户和任务组织成多个队列，每个队列设定资源数最低保障和最高上限，当一个队列的资源有剩余时，可暂时分享给其他队列。在资源调度时，优先将资源分配给资源使用率较低的队列。
+    * 在队列内部按照作业优先级FIFO进行调度；
+* 延迟调度策略:
+    * 通常作为其他调度策略的辅助措施来增加调度的数据局部性（在hadoop的公平调度策略以及Mesos中都有采用）
+    * 对于当前需要资源任务的i，若资源对于任务不满足数据的局部性，则可以暂时跳过任务i，将资源分配给其他任务，任务i等待后续的资源分配，若等待k次后仍不能满足数据局部性，则被迫接受当前资源（放弃数据局部性）
+* 主资源公平调度策略DRF:
+    * 在Mesos的中央调度器中采用，为最大最小公平算法的一个具体实现；
+    * 最大最小公平算法基本思想:最大化目前分配到最少资源量的用户会者任务的资源量
+    * 对每个用户,DRF计算分配给该用户的所有资源的各自分享量，其中的最大值称为“主分享量”，其对应资源为“主资源”（不同用户拥有不同类型的主资源）
+    * 分配策略:在保证个用户的“主分享量”相同的情况下，最大化启动的任务数量
+* 此外还有其他针对Hadoop的改进的资源调度策略，如:资源感知调度策略，动态优先级调度策略，最长时间预估调度策略，约定截止时间调度策略等 
+
+## Mesos
+* 典型的两级调度器(主从架构):
+    * 中央调度器采用极简功能和极简接口，只是根据分配策略(可插拔提供DRF和优先级调度)决定分配给各个框架的资源数量(由资源列表表示)，由多个主控服务器构成，通过ZooKeeper保证当出现故障时主备的切换
+    * 各个框架自身负责数据局部性等具体资源调度策略，且需要向Mesos注册框架调度器和执行器两个接口
+        * 框架调度器将中央调度器分配资源列表中的资源分配给自身的任务；
+        * 执行器运行在集群中的从节点执行具体的任务，执行器相互间通过LXC资源隔离
+        * 不同框架不能向中央调度器指定其资源要求和约束条件，只能被动接受，但当接受到的资源不符合要求时，可以拒绝，等待后续的资源分配。同时为避免频繁的拒绝资源带来的效率问题，不同框架可以向中央调度器注册"过滤器"，对其需要的资源进行描述；
+    * 优点:减小中央负载，提高效率，同时在适应新的框架时中央调度器只需较小的改动，增加了调度系统的可扩展性和健壮性。比较适合不同框架任务同质化场景，尤其大部分都是短作业的场景；
+## YARN
+* Hadoop2.0引入的一个独立的资源管理系统（在hadoop1.0时所有任务的资源和生命周期均由全局唯一的JObTracker负责，容易成为系统瓶颈，其存在单点失效问题），同时每个作业都拥有各自的应用管理器AM来负责各自的资源申请和任务生命周期管理
+* 典型的两级调度系统:
+    * 唯一资源管理器RM充当中央调度器的角色，(与Mesos)支持抢占式的调度
+        * 调度器负责提供各种公平或能力调度策略，支持策略可插拔
+        * Client-RM接口负责按照一定的协议管理客户提交的作业
+        * RM-NM接口以及各机器上的节点管理器NM铜鼓心跳方式进行通信，获知集群内机器可以资源和故障信息
+        * AM服务器负责系统内所有AM的最初启动和运行状态管理；
+    * 每个任务各自的AM作为二级调度器，在向RM申请资源时可明确数据局部性等条件
+* 过程:
+用户通过客户端向YARN提交作业；
+    * RM通过调度器申请资源，用于启动运行作业的AM(申请成功AMS通知节点管理器在相应的容器内运行AM);
+    * AM负责将作业划分为若干任务，并向RM申请所需资源，RM收到资源请求后通过调度器分配资源，找到合适的容器后，将资源信息返回个AM;
+    * AM根据资源信息，在任务间优化分配策略，确定后直接与资源所在节点管理器联系，在对应容器中启动任务，由节点管理器负责容器的隔离
+    * AM在不认任务执行完成后逐步向RM释放所占资源
+    
+
