finished:搜索引擎chapter6链接分析

--- a/Others/这就是搜索引擎(核心技术详解).md
+++ b/Others/这就是搜索引擎(核心技术详解).md
@@ -193,3 +193,81 @@ tags: [搜索引擎,信息检索,张俊林,读书笔记,算法]
     * 召回率:一次搜索结果中包含的相关文档占整个集合中相关文档的比例
     * P@10指标：更关注排名最靠前的结果指标
     * MAP指标：针对多次查询平均准确率进行评价
+
+## 链接分析
+* 搜索引擎在对用户查询进行网页匹配时，主要考虑两方面因素:
+    * 用户查询与网页内容的相似性
+    * (通过链接分析得到的）网页的重要性
+* 概念模型
+    * 随机游走模型:
+        * 针对用户在浏览网页时的用户行为建立的抽象概念模型(输入网址，浏览页面，顺着页面的链接按照自己的兴趣不断打开新的网页进行直接跳转，或再次输入一个新的网址进行远程跳转)，
+        * 假设用户跳转到任意一个页面的概率相同，随机游走即是对直接跳转和远程跳转两种用户浏览行为的抽象
+    * 子集传播模型(作者自己总结):
+        * 基本思想:将所有网页划分为不同的子集，从某个具有其特殊的性质的子集出发，给予子集内网页初始权值，之后根据子集内网页和其他网页的链接关系，按照一定的方式将权值传递到其他网页(如HITS算法和Hilltop算法及其衍生算法)
+* 不同算法之间的关系:
+    * PageRank算法借鉴了随机游走模型的思想，向下又衍生出:智能游走模型，偏置游走模型，主题敏感PageRank
+    * 子集传播模型包括Hilltop算法，HITS算法，PHITS。
+    * 同时综合借鉴PageRank算法和HITS算法衍生出SALSA算法，向下又衍生出BFS算法
+* PageRank算法
+    * 综合考虑网页的入链数量(入链越多网页越重要)，此外还参考网页质量因素(质量高的页面会通过链接向其他页面传递高的权重)对网页打分。
+    * 开始赋予每个网页初始的重要性得分，然后通过迭代计算，不断更新网页的重要性，直至基本稳定。
+    * 在迭代过程中，每个网页的重要性得分被均分传递到出链的页面，同时将所有入链传递的权重进行累加作为自身新的权重；
+    * 链接陷阱：对于几个网页相互指向，构成一个环形结构(且环形结构只具有指向它的入链，不具有指向外部的出链)，会导致在PageRank更新的过程中，不断吸收外部传递过来的权重，而不向外传递
+        * 远程跳转是解决链接陷阱的通用方式，在网页向外传递权重时，可以以一定的概率向其他任意网页传递。
+* HITS算法:
+    * 基本定义
+        * Authority页面:指某个领域或某个话题下相关的高质量页面
+        * Hub页面:指包含很多指向高质量Authority页面链接的网页。
+    *基本假设(相互增强):
+        * 一个好的Authority页面会被很多好的Hub页面指向
+        * 一个好的Hub页面会指向很多好的Authority页面
+    * 算法过程:
+        * 对于给定的用户查询，首先利用现有的其他搜索引擎系统，取排名相对靠前的结果，得到与用户查询高度相关的初始根集
+        * 凡是与根集中的页面有直接链接关系的页面都将被扩充进扩展集；
+        * 对于扩展集内的每个页面设立两个权重，表征其是Hub页面和Authority页面的可能性，初始相同
+        * 页面的Authority权重等于所有入链的Hub权重之和，页面的Hub权重等于所有出链的Authority权重之和，不断迭代计算直至系统的权重分布相对稳定
+    * 存在的问题：
+        * 计算效率低，
+        * 主题漂移问题(当扩展集中包含主题无关页面且有较多的相互链接指向，会出现紧密链接社区现象)
+        * 容易被作弊者操纵结果:利用一个页面指向较多的Authority页面，同时指向想要展示的作弊页面
+        * 结构不稳定:当添加少数页面改变链接关系时，算法排名结果可能出现很大变化
+* SALSA算法
+    * 首先采用HITS算法的方法，生成与查询相关的扩展网页集合.
+    * 将扩展网页集合转换为由Hub集合和Authority集合组成的无向二分图
+        * 若一个页面包含指向扩展集合内其他页面的出链，则这个页面可以被划分到Hub集合；
+        * 若一个页面包含扩展集合其他页面的入链，则这个页面可以被划分为Authority页面
+    * 在权值传播过程中，权值被所有链接平均分配。在转移过程中另外一个集合内的节点只是充当桥梁作用，只关心跳转回本聚合的路径。从而生成Authority节点有向关系图和Hub节点有向关系图。
+    * 根据有向关系图，利用随机游走模型计算节点的Authority权值(类似求矩阵主秩)：ai = [|Aj||Bi|]/[|A||Ej|],其中Aj为连通图中节点的个数，A为Authority集合的节点总数，Bi为节点入链个数，Ej为连通图中入链的个数
+* 主题敏感PageRank
+    * 将用户兴趣，页面主题以及链接所指向网页与当前网页主题的相似程度综合考虑,算法引入16中主题模型，对于某个网页，对应某个主题类型都有相应的PageRank分值，同时在查询处理时，对用户查询进行分类
+    * 离线计算分类主题的PageRank值：
+        * 对于某个主题的PageRank分值，将所有网页划分为两个集合:该主题对应的人工挑选的高质量网页集合S（如ODP中对应分类主题下包含网页，具有较大的跳转概率），另外的网页集合T，然后集合S内的网页根据链接关系向集合T内的网页传递权值
+    * 在线利用已有的分类主题PageRank分值，评估网页与查询的相似度
+        * 首先利用查询分类器，计算用户查询属于某个主题的概率，同时利用索引查找 所有包含该查询内容的网页，并得到其各主题的PageRank值。然后查询对应的主题概率相乘后加和，记得到网页与查询的相似度
+    * 利用主题敏感PageRank可构造个性化搜索：考虑用户的历史搜索信息等计算用户查询属于某个主题的概率值。
+* Hiltop算法：
+    * 基本定义：
+        * 不同网站属于同一机构或者拥有者密切关联称为从属组织网站(如子网段或主域名相同)，其包含的网页为从属组织页面
+        * 专家页面:即与某个主题相关的高质量页面，且满足这些页面的链接所指向的页面相互之间为非从属组织页面，且大多与该专家页面主题相近
+    * Hilltop算法将互联网页面分为两个集合：由专家页面构成互联网页面集合，和由其他页面组成的目标网页集合。
+    * 算法过程:
+        * 首先通过一定的规则从所有的网页中筛选出专家页面子集合，并单独为其建立索引(只对关键片段建立索引，如网页标题，H１标签内容,ＵＲＬ锚文字等)。
+            * 专家页面至少包含k个出链，且出链指向的所有页面为非从属关系
+        * 在收到用户查询请求后，首先在专家页面集合中找到与查询高度相关的专家页面。并计算其相似性得分
+            * 关键片段包含的查询词越多，相关性越高
+            * 关键片段自身类型不同权重不同
+            * 失配率(不属于查询词的关键片段单词个数)越小，相关性越高。
+        * 然后根据随机游走，有专家页面页面向目标页面传递权重。
+            * 在传递权重之前，首先对链接关系进行整理，能够获得权重的目标页面必须满足:
+                * 必须有两个非从属关系的专家页面指向它(所有从属关系的专家页面算一个指向)
+                * 同时要求专家页面和所指向的页面也不能为从属关系
+* 其他改进算法:
+    * 智能游走模型
+        * 判断网页包含的链接与用户查询的相关性(认为用户会大概率点击与查询相关的网页)
+    * 偏置游走模型
+        * 考虑链接所指向的网页内容与当前所浏览的网页内容的相似性
+    * PHITS算法
+        * 认为不同链接传递权值的能力不同，因此需要计算两个页面S和T之间的链接强度；
+        * 引入主题隐变量，两个页面之间链接的强度取决于其两者隐变量的主题耦合关系(即相似性越强的链接网页，传递权值能力越强)
+    * BFS算法                
+        * 只要网页S可以到达T,即可以对页面T施加影响，但同时随着两者间的链接路径越来越远，影响力呈指数关系下降
